2010-09-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (draw_inside_color_smooth_box_bitmap):
	The color box is constructed from 128 segments.  If any of these
	straddles a boundary within a defined palette, split it into 2 segments
	so that discrete color transitions are described with pixel accuracy.
	This does not fix imprecision in the palette itself, which can result
	if too few colors are allocated (set palette maxcolors).

2010-09-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/titlepage.ipf docs/titlepage.tex: Years updated.

2010-09-26  Ethan A Merritt  <merritt@u.washington.edu>

	Version 4.4.2  (3 bug fixes on top of 4.4.1 rather than current CVS).

	* src/command.c (replotrequest):  Once we have started to replot, the
	previous data no longer exists. Therefore we must set refresh_ok = 0.
	(This fix is in 4.4.2)


2010-09-24  Ethan A Merritt  <merritt@u.washington.edu>

	* Fix a regression in 4.4.1 that causes "lc N" not to work in several
	contexts. (This one is in 4.4.2)

2010-09-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (axis_checked_extend_empty_range):  When extending from
	an empty range, don't invert the axis direction by accident.
	Bug #3074365

2010-09-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (fill_between):  Fix filled curve clipping error.
	Bug #2963485 (This fix is in 4.4.2)

2010-09-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c src/internal.c src/internal.h docs/gnuplot.doc:
	New function value("X") returns the value of a variable named X.
	A = "foo"
	value("A") returns "foo"
	value(A) returns NaN, because there is no variable named foo
	value(2) returns 2 (numeric expressions have a natural value)
	Among other things, this allows you to read variable names from
	a data file and use the current value of those variables in a plot.

2010-09-17  Peter Juhasz  <juhaszp@users.sourceforge.net>
